k8s/services/model-inference/networkpolicy.yaml
# -----------------------------------------------------------------------------
# NetworkPolicy to secure model-inference pods.
# Allows ingress only from UI pods on port 8000 
# and egress only for DNS lookups.
# -----------------------------------------------------------------------------

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mi-allow-ui-and-dns
  namespace: hospital-ml
  labels:
    app: model-inference
    part-of: hospital-ml
spec:
  podSelector:
    matchLabels:
      app: model-inference
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow calls from the UI to /predict and /healthz
    - from:
        - podSelector:
            matchLabels:
              app: ui
      ports:
        - protocol: TCP
          port: 8000
  egress:
    # DNS lookups
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
